--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "resend": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
